finalize ignoring deprecated warnings for box and botocore

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 filterwarnings =
-    ignore::DeprecationWarning:urllib3/_collections.*:
+    ignore::DeprecationWarning:boxsdk.*:
+    ignore::DeprecationWarning:botocore.*:
 
 
 
-#    ignore::DeprecationWarning:boxsdk.*:
