--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-boxsdk
-httplib2
 apiclient
-python-magic
-oauth2client
+boxsdk
 boto3
 botocore
+httplib2
+google-api-python-client
+google-auth
+google-auth-httplib2
+python-magic
+oauth2client
