--- a/README.yml
+++ b/README.yml
@@ -1,6 +1,6 @@
 ---
 owner:
-  firstname: "TBD"
-  lastname: "TBD"
+  firstname: "Pratibha"
+  lastname: "Pagadala"
   hid: "fa19-516-152"
   community: "e516"
