made changes to pytests as per specifications provided.

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,8 @@
 filterwarnings =
     ignore::DeprecationWarning:boxsdk.*:
     ignore::DeprecationWarning:botocore.*:
+markers =
+    incremental: incremental test.
 
 
 
