update version managemnt

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,8 +4,9 @@ commit = True
 tag = False
 
 [bumpversion:file:VERSION]
-
+[bumpversion:file:./cloudmesh/storage/__init__.py]
 [bumpversion:file:./cloudmesh/storage/__version__.py]
+
 search = version: {current_version}
 replace = {new_version}
 
