--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,4 @@ oauth2client==4.1.3
 python-magic==0.4.15
 
 # The following packages are considered to be unsafe in a requirements file:
+# setuptools
