--- a/.travis.yml
+++ b/.travis.yml
@@ -5,22 +5,17 @@ sudo: required
 language: python
 
 python:
-  - "3.7"
-  - "3.8"
-#  - "3.8-dev"  # 3.8 development branch
-#  - "nightly"  # nightly build
+  - "3.8.2"
 
 
 install:
-  - pwd
+  - python --version
   - pip install cloudmesh-installer
-  - pip install -r requirements.txt
-  - pip install -r requirements-dev.txt
-  - pip install .
+  - cloudmesh-installer get storage
   - ls
   - pwd
-  - python --version
+
+script:
   - mkdir -p ~/.cloudmesh
   - wget -P ~/.cloudmesh https://raw.githubusercontent.com/cloudmesh/cloudmesh-configuration/master/cloudmesh/configuration/etc/cloudmesh.yaml
-
-script: pytest -v --capture=no tests/test_storage_installer.py
+  - pytest -v --capture=no tests/test_storage_installer.py
